--- a/belly_button_biodiv/index.html
+++ b/belly_button_biodiv/index.html
@@ -38,6 +38,9 @@
         <div id="gauge"></div>
       </div>
     </div>
+    
+    <br><br><br><br><br><br>
+
     <div class="row">
       <div class="col-md-12">
         <div id="bubble"></div>
@@ -48,7 +51,8 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.5.0/d3.js"></script>
   <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
   <script src="samples.json"></script>
-  <script src="./static/javascript/app.js"></script>
+  <!-- <script src="./static/javascript/app.js"></script> -->
+  <script src="./static/javascript/app3.js"></script>
   <!-- <script src="./static/js/bonus.js"></script> -->
   <!-- <script src="samples.json"></script> -->
   
